# plasma-keyboard

./: .gitignore  CMakeLists.txt
po/lv/: plasma-keyboard.po
po/nn/: kcm_plasmakeyboard.po  plasma-keyboard.po
src/: CMakeLists.txt  inputlisteneritem.cpp  inputlisteneritem.h  kwinfakeinput.cpp  kwinfakeinput.h  main.cpp  org.kde.plasma.keyboard.desktop  plasmakeyboardstate.cpp  plasmakeyboardstate.h
src/qml/: main.qml
src/qmlplugin/: BreezeConstants.qml  BreezeKeyPanel.qml  CMakeLists.txt  KeysymKey.qml
src/styles/breeze/: style.qml
